Code restructuring II

--- a/simulator/notebooks/merge_field_cluster.ipynb
+++ b/simulator/notebooks/merge_field_cluster.ipynb
@@ -6,18 +6,47 @@
    "metadata": {
     "collapsed": true,
     "ExecuteTime": {
-     "end_time": "2024-09-17T14:13:28.304858Z",
-     "start_time": "2024-09-17T14:13:26.591220Z"
+     "end_time": "2025-03-26T16:59:16.955794Z",
+     "start_time": "2025-03-26T16:59:16.548317Z"
     }
    },
    "source": [
+    "import sys\n",
     "import numpy as np\n",
     "import pandas as pd\n",
-    "import matplotlib.pyplot as plt\n",
-    "from modules.ClusterSim import ClusterSim"
+    "import matplotlib.pyplot as plt"
    ],
    "outputs": [],
    "execution_count": 1
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-03-26T17:02:14.724461Z",
+     "start_time": "2025-03-26T17:02:14.706407Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "sys.path.append('/Users/ratzenboe/Documents/work/projects/AstroSimformer/simulator/modules')\n",
+    "from ClusterSim import ClusterSim"
+   ],
+   "id": "6647905238d04af4",
+   "outputs": [
+    {
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'utils.cluster_sampler'; 'utils' is not a package",
+     "output_type": "error",
+     "traceback": [
+      "\u001B[0;31m---------------------------------------------------------------------------\u001B[0m",
+      "\u001B[0;31mModuleNotFoundError\u001B[0m                       Traceback (most recent call last)",
+      "Cell \u001B[0;32mIn[4], line 2\u001B[0m\n\u001B[1;32m      1\u001B[0m sys\u001B[38;5;241m.\u001B[39mpath\u001B[38;5;241m.\u001B[39mappend(\u001B[38;5;124m'\u001B[39m\u001B[38;5;124m/Users/ratzenboe/Documents/work/projects/AstroSimformer/simulator/modules\u001B[39m\u001B[38;5;124m'\u001B[39m)\n\u001B[0;32m----> 2\u001B[0m \u001B[38;5;28;01mfrom\u001B[39;00m\u001B[38;5;250m \u001B[39m\u001B[38;5;21;01mClusterSim\u001B[39;00m\u001B[38;5;250m \u001B[39m\u001B[38;5;28;01mimport\u001B[39;00m ClusterSim\n",
+      "File \u001B[0;32m~/Documents/work/projects/AstroSimformer/simulator/modules/ClusterSim.py:5\u001B[0m\n\u001B[1;32m      3\u001B[0m \u001B[38;5;28;01mfrom\u001B[39;00m\u001B[38;5;250m \u001B[39m\u001B[38;5;21;01mastropy\u001B[39;00m\u001B[38;5;21;01m.\u001B[39;00m\u001B[38;5;21;01mcoordinates\u001B[39;00m\u001B[38;5;250m \u001B[39m\u001B[38;5;28;01mimport\u001B[39;00m ICRS, Galactic\n\u001B[1;32m      4\u001B[0m \u001B[38;5;28;01mfrom\u001B[39;00m\u001B[38;5;250m \u001B[39m\u001B[38;5;21;01mastropy\u001B[39;00m\u001B[38;5;250m \u001B[39m\u001B[38;5;28;01mimport\u001B[39;00m units \u001B[38;5;28;01mas\u001B[39;00m u\n\u001B[0;32m----> 5\u001B[0m \u001B[38;5;28;01mfrom\u001B[39;00m\u001B[38;5;250m \u001B[39m\u001B[38;5;21;01mutils\u001B[39;00m\u001B[38;5;21;01m.\u001B[39;00m\u001B[38;5;21;01mcluster_sampler\u001B[39;00m\u001B[38;5;250m \u001B[39m\u001B[38;5;28;01mimport\u001B[39;00m ClusterSampler\n\u001B[1;32m      6\u001B[0m \u001B[38;5;28;01mfrom\u001B[39;00m\u001B[38;5;250m \u001B[39m\u001B[38;5;21;01mutils\u001B[39;00m\u001B[38;5;21;01m.\u001B[39;00m\u001B[38;5;21;01mcompute_uncertainties\u001B[39;00m\u001B[38;5;250m \u001B[39m\u001B[38;5;28;01mimport\u001B[39;00m UncertaintyHandler\n\u001B[1;32m      7\u001B[0m \u001B[38;5;28;01mfrom\u001B[39;00m\u001B[38;5;250m \u001B[39m\u001B[38;5;21;01mutils\u001B[39;00m\u001B[38;5;21;01m.\u001B[39;00m\u001B[38;5;21;01mcompute_observables\u001B[39;00m\u001B[38;5;250m \u001B[39m\u001B[38;5;28;01mimport\u001B[39;00m ErrorBase\n",
+      "\u001B[0;31mModuleNotFoundError\u001B[0m: No module named 'utils.cluster_sampler'; 'utils' is not a package"
+     ]
+    }
+   ],
+   "execution_count": 4
   },
   {
    "metadata": {
